Fixed dumb padding issue that I caused
Video script link now infinitely more clickable (because the iframe padding no longer overlaps with it)

--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,11 @@ img {
 
 /* Upotettujen videoiden muotoilu */
 iframe {
-    padding-bottom: 20px;
     border: 0;
+}
+
+#bottomframe {
+    padding-bottom: 20px;
 }
 
 .embeddedVideo {
